@@ -16,7 +16,7 @@ DEFAULT install
 
 LABEL install
 	kernel ${KERNEL}
-	append vga=normal initrd=${INITRD} ramdisk_size=${RAMDISK_SIZE} root=/dev/rd/0 devfs=mount,dall rw ${CONSOLE} --
+	append vga=normal initrd=${INITRD} ramdisk_size=${RAMDISK_SIZE} root=/dev/rd/0 rw ${CONSOLE} --
 LABEL install24
 	kernel ${KERNEL}
 	append vga=normal initrd=${INITRD} ramdisk_size=${RAMDISK_SIZE} root=/dev/rd/0 devfs=mount,dall rw ${CONSOLE} --
