@@ -16,41 +16,41 @@ DEFAULT install
 
 LABEL install
 	kernel ${KERNEL}
-	append vga=normal initrd=${INITRD} ramdisk_size=${RAMDISK_SIZE} root=/dev/rd/0 devfs=mount,dall rw ${CONSOLE} --
+	append vga=normal initrd=${INITRD} ramdisk_size=${RAMDISK_SIZE} root=/dev/rd/0 rw ${CONSOLE} --
 LABEL install24
 	kernel ${KERNEL}
-	append vga=normal initrd=${INITRD} ramdisk_size=${RAMDISK_SIZE} root=/dev/rd/0 devfs=mount,dall rw ${CONSOLE} --
+	append vga=normal initrd=${INITRD} ramdisk_size=${RAMDISK_SIZE} root=/dev/rd/0 rw ${CONSOLE} --
 LABEL linux
 	kernel ${KERNEL}
-	append vga=normal initrd=${INITRD} ramdisk_size=${RAMDISK_SIZE} root=/dev/rd/0 devfs=mount,dall rw ${CONSOLE} --
+	append vga=normal initrd=${INITRD} ramdisk_size=${RAMDISK_SIZE} root=/dev/rd/0 rw ${CONSOLE} --
 
 LABEL expert
 	kernel ${KERNEL}
-	append DEBCONF_PRIORITY=low vga=normal initrd=${INITRD} ramdisk_size=${RAMDISK_SIZE} root=/dev/rd/0 devfs=mount,dall rw ${CONSOLE} --
+	append DEBCONF_PRIORITY=low vga=normal initrd=${INITRD} ramdisk_size=${RAMDISK_SIZE} root=/dev/rd/0 rw ${CONSOLE} --
 LABEL expert24
 	kernel ${KERNEL}
-	append DEBCONF_PRIORITY=low vga=normal initrd=${INITRD} ramdisk_size=${RAMDISK_SIZE} root=/dev/rd/0 devfs=mount,dall rw ${CONSOLE} --
+	append DEBCONF_PRIORITY=low vga=normal initrd=${INITRD} ramdisk_size=${RAMDISK_SIZE} root=/dev/rd/0 rw ${CONSOLE} --
 
 LABEL install26
 	kernel ${KERNEL_26}
-	append vga=normal initrd=${INITRD_26} ramdisk_size=${RAMDISK_SIZE_26} root=/dev/rd/0 devfs=mount,dall rw ${CONSOLE} --
+	append vga=normal initrd=${INITRD_26} ramdisk_size=${RAMDISK_SIZE_26} root=/dev/rd/0 rw ${CONSOLE} --
 LABEL linux26
 	kernel ${KERNEL_26}
-	append vga=normal initrd=${INITRD_26} ramdisk_size=${RAMDISK_SIZE_26} root=/dev/rd/0 devfs=mount,dall rw ${CONSOLE} --
+	append vga=normal initrd=${INITRD_26} ramdisk_size=${RAMDISK_SIZE_26} root=/dev/rd/0 rw ${CONSOLE} --
 
 LABEL expert26
 	kernel ${KERNEL_26}
-	append DEBCONF_PRIORITY=low vga=normal initrd=${INITRD_26} ramdisk_size=${RAMDISK_SIZE_26} root=/dev/rd/0 devfs=mount,dall rw ${CONSOLE} --
+	append DEBCONF_PRIORITY=low vga=normal initrd=${INITRD_26} ramdisk_size=${RAMDISK_SIZE_26} root=/dev/rd/0 rw ${CONSOLE} --
 
 LABEL rescue
 	kernel ${KERNEL}
-	append vga=normal initrd=${INITRD} ramdisk_size=${RAMDISK_SIZE} root=/dev/rd/0 devfs=mount,dall rw ${CONSOLE} rescue/enable=true --
+	append vga=normal initrd=${INITRD} ramdisk_size=${RAMDISK_SIZE} root=/dev/rd/0 rw ${CONSOLE} rescue/enable=true --
 LABEL rescue24
 	kernel ${KERNEL}
-	append vga=normal initrd=${INITRD} ramdisk_size=${RAMDISK_SIZE} root=/dev/rd/0 devfs=mount,dall rw ${CONSOLE} rescue/enable=true --
+	append vga=normal initrd=${INITRD} ramdisk_size=${RAMDISK_SIZE} root=/dev/rd/0 rw ${CONSOLE} rescue/enable=true --
 LABEL rescue26
 	kernel ${KERNEL_26}
-	append vga=normal initrd=${INITRD_26} ramdisk_size=${RAMDISK_SIZE_26} root=/dev/rd/0 devfs=mount,dall rw ${CONSOLE} rescue/enable=true --
+	append vga=normal initrd=${INITRD_26} ramdisk_size=${RAMDISK_SIZE_26} root=/dev/rd/0 rw ${CONSOLE} rescue/enable=true --
 
 PROMPT 1
 TIMEOUT 0
